--- a/hairdo/profile.html
+++ b/hairdo/profile.html
@@ -27,18 +27,32 @@
     <![endif]-->
   <!-- jquery script-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPklfv5tt-L3UNXjaL9l7dmBItQ97l0s&callback=myMap"></script>
   <script type="text/javascript">
-    $(document).ready(function()
-    {
-      $.get(
-        'service.php',
-        { what: "Mr"},
-        function(data)
-        {
-          $('#serviceList').html(data);
-        });
-    });
-  </script>
+      $(document).ready(function()
+      {
+        myMap();
+        $.get(
+          'service.php',
+          { what: "Mr"},
+          function(data)
+          {
+            $('#serviceList').html(data);
+            
+          });
+          myMap();
+
+      });
+              function myMap() {
+          var mapCanvas = document.getElementById("map");
+          var mapOptions = {
+              center: new google.maps.LatLng(51.5, -0.2),
+              zoom: 10
+          };
+          var map = new google.maps.Map(mapCanvas, mapOptions);    
+        }
+      
+    </script>
 
   <body>
     <!-- Navigation -->
@@ -131,12 +145,8 @@
         </div>
         <!--/. col-md -->
 
-        <div class="col-md-5">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2948.2793897849465!2d-71.0596334!3d42.3578847!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1394254234525"
-            width="400" height="400" style="border:0"></iframe>
-        </div>
-        <!--/span-->
-      </div>
+    <div class="col-md-5" id="map" style="width:400px;height:400px;border:0;background:grey">
+    </div>
       <!--/row-->
     </div>
     <!--./container -->
