Fixed google map API

--- a/hairdo/index.html
+++ b/hairdo/index.html
@@ -358,6 +358,7 @@
         <script src="js/jquery.backstretch.min.js"></script>
         <script src="js/scripts.js"></script>
 		<script src="js/registerform.js"></script>
+		<script src="js/navbar-Collapse.js"></script>
 </body>
 
 </html>
