--- a/hairdo/profile-edit.html
+++ b/hairdo/profile-edit.html
@@ -19,7 +19,8 @@
   
   <div id="w">
     <div id="content" class="clearfix">
-      <div id="userphoto"><img src="img/profile-edit-images/avatar.png" alt="default avatar"></div>
+      <button onclick="location.href='index.html'" class="btn btn-info">Go Back</button>
+	  <div id="userphoto"><img src="img/profile-edit-images/avatar.png" alt="default avatar"></div>
       <h1>Partner User Profile Layout</h1>
 
       <nav id="profiletabs">
