--- a/hairdo/index.html
+++ b/hairdo/index.html
@@ -25,6 +25,8 @@
 	<link href="css/colorgraph.css" rel="stylesheet">
     <!-- Icons Font -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	
+		
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -58,7 +60,6 @@
                             <li><a href="#owl-hero" class="page-scroll">Home</a></li>
                             <li><a href="#portfolio" class="page-scroll">Works</a></li>
                             <li><a href="#team" class="page-scroll">About</a></li>
-                            <li><a href="#contact" class="page-scroll">Contact</a></li>
                         </ul>
                   	
                     	<form id="signin" class="navbar-form navbar-right" role="form">
@@ -78,7 +79,7 @@
 						</div>	
 							
 						<div class="input-group">	
-							<a id="signupbutton" class="btn btn-transparent" data-toggle="modal" data-target="#modal-signup">Signup</a>	
+							<button type="button" id="signupbutton" class="btn btn-transparent" data-toggle="modal" data-target="#modal-signup">Signup</button>	
 						</div>
 				 </form>																				
                 </div>
@@ -99,9 +100,23 @@
 	============================================= -->
     <section id="portfolio">
         <div class="container-fluid">
-            <h2>Our Work</h2>
+            <h2>Hair Saloon List</h2>
+			
+			<!-- search	bar -->	
+				<div class="container searchbardiv" id="formsearch">
+				<form role="search" method="get" id="searchform"  >
+					<div class="input-group">
+                        <input type="text" id="searchbox" class="form-control" name="s" id="s"> 
+							<div class="input-group-btn">
+                            <button class="btn btn-default"  id="searchsubmit"  type="submit">
+                                <strong>Search</strong>
+                            </button>                             
+                        </div> 
+                    </div> 
+                </form>
+            </div>
+			
             <hr class="sep">
-            <p>Showcase Your Amazing Work With Us</p>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".3s">
                    <div class="hovereffect">
@@ -319,29 +334,6 @@ work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></
             </div>
         </div>
     </section>
-    <!-- Contact Us
-	============================================= -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <hr class="sep">
-            <p>Get In Touch</p>
-            <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
-                <form>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="Name" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="Email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                    </div>
-                    <a href="#" class="btn-block">Send</a>
-                </form>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer
 	============================================= -->
@@ -349,7 +341,7 @@ work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></
         <div class="container">
 			<img alt="logo" src="img/logo/logo.png">
             <h1>Hairdo</h1>
-            <h6>&copy; 2015 HAIRDO.</h6>
+            <h6>&copy; 2016 HAIRDO.</h6>
         </div>
     </footer>
 	
@@ -423,8 +415,8 @@ work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></
 			
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-				<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-danger btn-block btn-lg">Cancel</a></div>
+				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-block btn-lg" tabindex="7"></div>
+				<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-block btn-lg">Cancel</a></div>
 			</div>
 		</form>
 		</div>
@@ -461,28 +453,17 @@ work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></
 </div><!-- /.modal-signup -->
 
 
-
-
-
-
-
-	
-	 <!-- JS PLUGINS
+ <!-- JS PLUGINS
 	============================================= -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap-assets/js/bootstrap.min.js"></script>
-    <script src="js/custom.js"></script>  
-    <script src="js/jquery.easing.min.js"></script>
-    <!-- JS PLUGINS -->
+    <script src="js/custom.js"></script> 	
     <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-    <script src="plugins/waypoints/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.easing.min.js"></script>	
     <script src="plugins/countTo/jquery.countTo.js"></script>
     <script src="plugins/inview/jquery.inview.min.js"></script>
     <script src="plugins/Lightbox/dist/js/lightbox.min.js"></script>
     <script src="plugins/WOW/dist/wow.min.js"></script>
-
-
 </body>
 
 </html>
