--- a/hairdo/index-signed-in.html
+++ b/hairdo/index-signed-in.html
@@ -63,7 +63,7 @@
 						
 						<u1 class="nav navbar-right">		
 						<li class="nav navbar-right"><a href="#">Log out</a></li>
-						<li class="nav navbar-right"><a href="profile-edit.html">Profile</a></li> 
+						<li class="nav navbar-right"><a href="profile-edit-partner.html">Profile</a></li> 
 						 </u1>
 											
 						</div>	
@@ -94,9 +94,9 @@
 					<div class="input-group">
                         <input type="text" id="searchbox" class="form-control" name="s" id="s"> 
 							<div class="input-group-btn">
-                            <button class="btn btn-default"  id="searchsubmit"  type="submit">
+                            <a onclick="location.href='search.html'" class="btn btn-default"  id="searchsubmit"  type="submit">
                                 <strong>Search</strong>
-                            </button>                             
+                            </a>                             
                         </div> 
                     </div> 
                 </form>
@@ -181,61 +181,62 @@
 	============================================= -->
     <section id="work-process">
         <div class="container">
-            <h2>Work Process</h2>
+            <h2>Engagement Process</h2>
             <hr class="sep">
             <p>What Happen In The Background</p>
             <div class="row wow fadeInUp" data-wow-delay=".3s">
                 <div class="col-lg-3">
                     <span class="icon-chat"></span>
-                    <h4>1.Discuss</h4>
+                    <h4>1.View</h4>
                 </div>
                 <div class="col-lg-3">
-                    <span class="icon-circle-compass"></span>
-                    <h4>2.Sketch</h4>
+                    <span class="icon-search"></span>
+                    <h4>2.Search</h4>
                 </div>
                 <div class="col-lg-3">
-                    <span class="icon-browser"></span>
-                    <h4>3.Make</h4>
+                    <span class="icon-envelope"></span>
+                    <h4>3.Appointment</h4>
                 </div>
                 <div class="col-lg-3">
                     <span class="icon-global"></span>
-                    <h4>4.Publish</h4>
+                    <h4>4.Feedbacks</h4>
                 </div>
             </div>
         </div>
     </section>
     <!-- Some Fun Facts
 	============================================= -->
-    <section id="fun-facts">
+     <section id="fun-facts">
         <div class="container">
             <h2>Some Fun Facts </h2>
             <hr class="light-sep">
             <p>Fun Facts</p>
             <div class="row wow fadeInUp" data-wow-delay=".3s">
+			
+				<div class="col-lg-3">
+                    <span class="icon-trophy"></span>
+                    <h2 class="number timer">50</h2>
+                    <h4>Engaged Hair Saloons</h4>
+                </div>
                 <div class="col-lg-3">
                     <span class="icon-happy"></span>
-                    <h2 class="number timer">367</h2>
-                    <h4>Happy Clients</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-trophy"></span>
-                    <h2 class="number timer">150</h2>
-                    <h4>Project Done</h4>
-                </div>
+                    <h2 class="number timer">1430</h2>
+                    <h4>Happy Customers</h4>
+                </div>             
                 <div class="col-lg-3">
                     <span class="icon-wine"></span>
-                    <h2 class="number timer">121</h2>
-                    <h4>Glass Of Wine</h4>
+                    <h2 class="number timer">3450</h2>
+                    <h4>Appointments made</h4>
                 </div>
                 <div class="col-lg-3">
                     <span class="icon-documents"></span>
-                    <h2 class="number timer">10000</h2>
-                    <h4>Lines Of Code</h4>
+                    <h2 class="number timer">5000</h2>
+                    <h4>Lines Of Feedbacks</h4>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Some Fune Facts
+    <!-- Designer
 	============================================= -->
     <section id="team">
         <div class="container">
@@ -293,27 +294,27 @@
                 <div class="item">
                     <div class="quote">
                         <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
+                        <h5>I’am amazed, I should say thank you so much for your awesome services. Design is so 
 good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
+work only with <span>HairDo</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
 
                     </div>
                 </div>
                 <div class="item">
                     <div class="quote">
                         <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
+                        <h5>I’am amazed, I should say thank you so much for your awesome services. Design is so 
 good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
+work only with <span>HairDo</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
 
                     </div>
                 </div>
                 <div class="item">
                     <div class="quote">
                         <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
+                        <h5>I’am amazed, I should say thank you so much for your awesome services. Design is so 
 good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
+work only with <span>HairDo</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
 
                     </div>
                 </div>
